WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155665
NSURLSession: Set download resume data when a download fails due to an error
https://bugs.webkit.org/show_bug.cgi?id=155665
Summary
NSURLSession: Set download resume data when a download fails due to an error
Brady Eidson
Reported
2016-03-18 14:51:05 PDT
NSURLSession: Set download resume data when a download fails due to an error The download resume data is in the user info of the NSError. We should use it if it’s there.
Attachments
Patch v1
(2.10 KB, patch)
2016-03-18 15:41 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-03-18 15:41:13 PDT
Created
attachment 274461
[details]
Patch v1
Alex Christensen
Comment 2
2016-03-18 16:05:37 PDT
Comment on
attachment 274461
[details]
Patch v1 beautiful
WebKit Commit Bot
Comment 3
2016-03-18 16:53:48 PDT
Comment on
attachment 274461
[details]
Patch v1 Clearing flags on attachment: 274461 Committed
r198453
: <
http://trac.webkit.org/changeset/198453
>
WebKit Commit Bot
Comment 4
2016-03-18 16:53:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug