NSURLSession: Set download resume data when a download fails due to an error. https://bugs.webkit.org/show_bug.cgi?id=155665

Reviewed by Alex Christensen.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:task:didCompleteWithError:]): Save the resume data from the
  NSError userInfo if it exists.


Canonical link: https://commits.webkit.org/173781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198453 268f45cc-cd09-0410-ab3c-d52691b4dbfc